# smart-farm-backend

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
middle-ware/: mw2.cpp  mw3.py  seo.py  seo2.py  test.py
smallFarm/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
smallFarm/migrations/: 0001_initial.py  0002_soilsample_moisturesensor.py  0003_gasareasample_gascensor.py  0004_gassensor.py
teams/: admin.py  models.py  serializers.py  views.py
teams/migrations/: 0001_initial.py
